# blast-db-configuration

./: .pre-commit-config.yaml  LICENSE  README.md  organisms.json  pyproject.toml
.github/workflows/: generate-blast-conf.yml
conf/: databases.FB.FB2024_02.json  databases.FB.FB2024_04.json  databases.FB.FB2025_05.json
src/blast_db_configuration/: __main__.py  db_metadata.py
src/blast_db_configuration/ncbi/: genomes.py  taxonomy.py
